--- a/src/assets/scss/05-layout/_box.scss
+++ b/src/assets/scss/05-layout/_box.scss
@@ -37,18 +37,121 @@ $box-height: 440px;
     background: #E8E8E8;
     color: #000;
 
+
+    
+
     &-img{
-        display: block;
-        justify-content: center;
-        margin-bottom: 20px;
-        max-width: 100%;
-        min-height: 100px;
+      display: block;
+      justify-content: center;
+      width: 200px;
+      height: 100px;
+      padding: 0 0 15px 0;
+      margin: 0 auto;
     }
+    
+
+    &__grade{
+
+      &-container{
+        align-items: center;
+        border-top: 1px solid #aaa;
+        padding-top: 5px;
+        display: flex;
+        position: relative;
+        align-items: flex-end;
+        // margin-left: 20px;
+      }
+
+      &-img{
+        width: 20px;
+        height: 20px;
+        margin: 5px 0 0 10px;
+      }
+    }
+
+    &__avatar{
+      display: flex;
+      &-img{
+        // position: relative;
+        // top: 20px;
+        // left: 20px;
+        display: block;
+        margin-bottom: 20px;
+        width: 100%;
+        max-width: 50px;
+        max-height: 50px;
+      }
+      &-text{
+        margin-left: 20px;
+        font-size: 30px;
+        p{
+          font-size: 30px;
+          margin-bottom: 5px;
+        }
+      }
+    }
+
+    &__content{
+      padding: 20px;
+      width: 100%;
+      height: 100%;
+
+      &-subheader{
+        font-size: 20px;
+        margin: 10px 0 5px 10px;
+      }
+      &-descr{
+        font-size: 15px;
+        margin: 10px 0 10px 20px;
+        max-height: 120px;
+        height: 100%;
+      }
+    }
+    
+
+    
   }
   &__back {
     background-color: #5F9EA0;
     color: #fff;
     transform: rotateY(180deg);
+    
+    &-img{
+      width: 100%;
+      height: 130px;
+    }
+
+    &__content{
+      padding: 20px;
+      width: 100%;
+      height: 100%;
+    }
+
+
+    &-list{
+      min-height: 250px;
+      min-width: 100px;
+
+      li{
+        position: relative;
+        // color: #555555;
+        font-size: 14px;
+        font-weight: 300;
+        margin-bottom: 20px;
+        &:before{
+            content: "";
+            position: absolute;
+            width: 5px;
+            height: 5px;
+            background: #e8e8e8;
+            left: -14px;
+            top: 7px;
+        }
+      }
+    }
+    &-item{
+      color: #e8e8e8;
+    }
   }
   &:hover {
     .box__face {
@@ -58,4 +161,4 @@ $box-height: 440px;
       transform: rotateY(360deg);
     }
   }
-}  
+} 
